even/comments work

--- a/fullstack-civic-tech-main/frontend/src/index.css
+++ b/fullstack-civic-tech-main/frontend/src/index.css
@@ -8,8 +8,15 @@ input, label {
 }
 
 input {
-  margin-bottom: 1rem;
+  margin-bottom:
 }
+
+main {
+  display: flex;
+  height: 100vh;
+flex-direction: row;
+}
+
 
 header {
   display: flex;
