Event card/ comments

--- a/fullstack-civic-tech-main/frontend/src/index.css
+++ b/fullstack-civic-tech-main/frontend/src/index.css
@@ -7,14 +7,13 @@ input, label {
   display: block;
 }
 
-input {
+/* input {
   margin-bottom:
-}
+} */
+
 
 main {
-  display: flex;
   height: 100vh;
-flex-direction: row;
 }
 
 
