--- a/fullstack-civic-tech-main/frontend/src/index.css
+++ b/fullstack-civic-tech-main/frontend/src/index.css
@@ -1,32 +1,82 @@
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
-  color: #FFFDD0
 }
+
 input, label {
   display: block;
-  color: #FFFDD0
 }
+
 input {
-  margin-bottom: 1rem;
+  margin-bottom:
 }
+
+
+main {
+  height: 170vh;
+}
+
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1rem;
-  background: #710193;
+  padding: .3rem 1rem;
+  background: #AB82FF;
 }
+
 #logo {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 700;
   text-decoration: none;
-  color: #FFFDD0;
+  color: #000000;
 }
+
 nav ul {
   display: flex;
   gap: 1rem;
-  padding: 0;
+  padding: 1rem;
   margin: 0;
   list-style: none;
+}
+
+nav a {
+  display: block;
+  color: #FFF;
+  font-size: 1.2rem; 
+}
+
+.nav-link {
+  display: inline-block;
+  background-color: black;
+  padding: 0.5rem 1rem; 
+  border-radius: 5px; 
+}
+
+.nav-link a {
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  background-color: #333; 
+}
+
+
+img {
+  object-fit: contain;
+  width: 48px;
+  height: 48px;
+}
+
+form {
+  padding: 1rem;
+  border: 1px solid #CCC;
+  width: 15rem;
+  margin: 1rem auto;
+}
+
+.active {
+  color: #EEBC32; /* Yellow color */
+  font-weight: bold;
+  font-style: italic;
 }
