--- a/fullstack-civic-tech-main/frontend/src/index.css
+++ b/fullstack-civic-tech-main/frontend/src/index.css
@@ -14,6 +14,7 @@ input, label {
 
 main {
   height: 100vh;
+  width:max-content;
 }
 
 
@@ -64,3 +65,40 @@ form {
   font-weight: bold;
   font-style: italic;
 }
+
+
+/* footer.css */
+
+.footer {
+  width: 100%;
+  padding: 20px;
+  /* display: flex;
+  justify-content: space-around;  */
+  /* color: white; Example text color */
+  /*background-color: #ffffff; * / /* Example background color */
+}
+
+.footer .content {
+  display: flex;
+  justify-content: space-around; /* Align content at the ends */
+  align-items: center;
+}
+
+.footer .footer-links {
+  display: flex;
+  justify-content: space-around
+}
+
+.footer .footer-links a {
+  color: black; /* Link color */
+  text-decoration: none; /* Remove underline */
+  margin-left: 90px; /*Adjust spacing between links*/
+}
+
+.footer .footer-links a:hover {
+  text-decoration: underline; /* Add underline on hover */
+}
+/* width: auto;
+padding: 10px;
+display: flex;
+justify-content: space-evenly */
