--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -1,31 +1,51 @@
-
+main {
+  background-color: #C77DFF;
+  display: flex;
+  justify-content: center; /* Horizontally center content */
+  align-items: center; /* Vertically center content */
+  height: 100vh; /* Use full height of viewport */
+  width: 100%;
+}
 
 .container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  height: 100vh;
+  /* flex-direction: column; Align children vertically */
+  justify-content: center; /* Horizontally center children */
+  align-items: center; /* Vertically center children */
+  width: 0%;
+  background-color: black;
+  border-radius: 40px;
+  height: 80%;
+  
+  /* padding: 20px; Add padding for spacing */
 }
 
-.left-side {
-  flex: 1;
-  padding: 20px;
+
+.LeftSide {
+  border: 10px solid rgb(132, 27, 193);
+  height: 30em;
+  width: 30em;
+  margin: 3em;
+  border-radius: 10px;
 }
 
-.middle-section {
-  flex: 1;
-  padding: 20px;
+.MiddleSection {
+  width: 500px;
+  font-size: large;
+  color: aliceblue;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.right-side {
-  flex: 1;
-  padding: 20px;
+.RightSide {
+  background-color: black;
+  margin: 3em;
 }
 
 form {
   display: flex;
   flex-direction: column;
+  padding: 2em;
+  background-color: #C77DFF;
 }
 
 input[type="text"],
@@ -34,7 +54,39 @@ button {
   margin-bottom: 10px;
 }
 
+.formSwapButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+p {
+  color: aliceblue;
+}
+
+
+landingImg {
+  background-color: black;
+  height: 30em;
+  width: 30em;
+}
+
+formSwapButton {
+  margin: 10px;
+}
+
+form {
+  border-radius: 10px;
+}
+
+/* .imgContainer {
+  display: flex;
+  height: 10em;
+} */
+
+/* .Rightside {
+  padding: 100px;
+} */
 
 /* .container {
   display: flex;
