--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -12,7 +12,7 @@ main {
   justify-content: center; /* Horizontally center children */
   align-items: center; /* Vertically center children */
   width: 0%;
-  background-color: black;
+  background-color: #222222;
   border-radius: 40px;
   height: 80%;
   
@@ -24,7 +24,7 @@ main {
   height: 30em;
   width: 30em;
   margin: 3em;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .MiddleSection {
@@ -40,7 +40,7 @@ main {
 }
 
 .RightSide {
-  background-color: black;
+  background-color: #222222;
   margin: 3em;
 }
 
@@ -70,15 +70,21 @@ p {
 
 .landingImg {
   background-color: black;
-  height: 100%;
+  height:100%;
 }
 
-formSwapButton {
-  margin: 10px;
+button {
+  margin: 0px 60px;
+  color: #222222;
 }
+
+/* .formSwapButton {
+  margin: 0px 60px;
+  color: #222222;
+} */
 
 form {
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 /* .imgContainer {
