edited the styling for the question and button below the signup/login forms.

--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -73,15 +73,19 @@ p {
   height:100%;
 }
 
-button {
+/* button {
   margin: 0px 60px;
+  color: #222222; 
+/* } */
+
+.formSwapButton {
+  margin: 0px 93px;
   color: #222222;
 }
 
-/* .formSwapButton {
-  margin: 0px 60px;
-  color: #222222;
-} */
+.question {
+  padding: 10px 10px;
+}
 
 form {
   border-radius: 20px;
