changed border image color.

--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -20,7 +20,7 @@ main {
 }
 
 .LeftSide {
-  border: 10px solid rgb(132, 27, 193);
+  border: 10px solid #C77DFF;
   height: 30em;
   width: 30em;
   margin: 3em;
