styling almost complete majority of styling is done and few things needed remaining.

--- a/fullstack-civic-tech-main/frontend/src/components/EventCard.css
+++ b/fullstack-civic-tech-main/frontend/src/components/EventCard.css
@@ -1,4 +1,4 @@
-.event-card {
+/* .event-card {
     width: 18rem;
     margin-bottom: 20px;
   }
@@ -11,4 +11,4 @@
     margin-bottom: 5px;
   }
   
-  
+   */
