--- a/fullstack-civic-tech-main/frontend/src/index.css
+++ b/fullstack-civic-tech-main/frontend/src/index.css
@@ -60,71 +60,17 @@ nav a {
   border-radius: 5px; 
 }
 
-/* 
-img {
-  object-fit: contain;
-  width: 50%;
-  height: 40%;
-  border-radius: 50%;
-}
-
-/* form {
+form {
   padding: 1rem;
   border: 1px solid #CCC;
   width: 15rem;
   margin: 1rem auto;
-} */
+}
 
 .active {
   color: yellow;
   font-weight: bold;
   font-style: italic;
-}
-
-.card {
-  margin-bottom: 20px; 
-  width: fit-content;
-}
-
-.card-container {
-  display: flex;
-  flex-direction: column; 
-  align-items: center ; 
-  list-style-type: none;
-  height: 90%;
-  justify-content: center;
-  width: 100%;
-  padding: auto;
-  margin: auto;
-}
-
-.cards-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; 
-  width: 70%;
-}
-
-.cardli {
-  margin-bottom: 20px; 
-  width: calc(33.33% - 20px);
-  border-radius: 10%;
-  border-width: 3px;
-  border: #000;
-  border-style: solid;
-  display: flex;
-  align-items: center;
-  text-align: center;  
-  background-color: antiquewhite;
-}
-
-ul {
-  padding: 0%;
-}
-
-figure {
-  display: flex;
-  justify-content: center;
 }
 
 /* footer.css */
@@ -157,9 +103,9 @@ a, strong {
 
 .footer .footer-links a {
   color: black; /* Link color */
-  text-decoration: none; /* Remove underline */
-  margin-left: 90px; /*Adjust spacing between links*/
-}
+  /* text-decoration: none; Remove underline */
+  /* margin-left: 90px; Adjust spacing between links */
+/* } */
 
 .footer .footer-links a:hover {
   text-decoration: underline; /* Add underline on hover */
@@ -167,4 +113,4 @@ a, strong {
 /* width: auto;
 padding: 10px;
 display: flex;
-justify-content: space-evenly */ */
+justify-content: space-evenly */
