--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -1,10 +1,10 @@
-main {
+/* main {
   background-color: #C77DFF;
   display: flex;
   justify-content: center; /* Horizontally center content */
-  align-items: center; /* Vertically center content */
-  height: 100vh; /* Use full height of viewport */
-}
+  /* align-items: center; Vertically center content */
+  /* height: 100vh; Use full height of viewport */
+/* } */
 
 .container {
   display: flex;
