--- a/fullstack-civic-tech-main/frontend/src/pages/Landing.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/Landing.css
@@ -1,28 +1,21 @@
 .landingMain {
-  background-color: #C77DFF;
   display: flex;
   justify-content: center; /* Horizontally center content */
   align-items: center; /* Vertically center content */
   height: 100vh; /* Use full height of viewport */
 }
 
-.container {
+.landingContainer {
   display: flex;
   justify-content: center; /* Horizontally center children */
-  align-items: center; /* Vertically center children */
-  width: 0%;
-  background-color: #222222;
-  border-radius: 40px;
+  align-items: center; /*Vertically center children */
+  width: 94%;
+  border: white solid 20px;
+  /* background-color: yellow; */
+  border-radius: 100px;
   height: 80%;
 }
 
-.LeftSide {
-  border: 10px solid #C77DFF;
-  height: 30em;
-  width: 30em;
-  margin: 3em;
-  border-radius: 20px;
-}
 
 .MiddleSection {
   width: 500px;
@@ -33,7 +26,7 @@
 
 .landingTitle {
   color:aliceblue;
-  font-size: xx-large;
+  font-size: xxx-large;
 }
 
 .RightSide {
@@ -51,7 +44,8 @@ form {
 input[type="text"],
 input[type="password"],
 button {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  border-radius: 10px;
 }
 
 .formSwapButton {
@@ -67,7 +61,8 @@ button {
 
 .landingImg {
   background-color: black;
-  height:100%;
+  height:70%;
+
 }
 
 button {
@@ -80,8 +75,9 @@ button {
   color: #222222;
 }
 
-.question {
+.landingLoginQuestion {
   padding: 10px 10px;
+  color: black;
 }
 
 .registerOutForm {
@@ -112,24 +108,21 @@ form {
 
 }
 
-a, strong {
+.footerA, strong {
   color: aliceblue;
 }
 
-.footer .content, a:hover {
+.footer .content, .footerA:hover {
   display: flex;
   justify-content: space-around; /* Align content at the ends */
   align-items: center;
   color: yellow;
-
 }
 
-.footer .footer-links a {
-  color: black; /* Link color */
-  text-decoration: none; /* Remove underline */
-  margin-left: 90px; /*Adjust spacing between links*/
+.footer .footerA:hover {
+  text-decoration: none; 
 }
 
-.footer .footer-links a:hover {
-  text-decoration: underline; /* Add underline on hover */
+span{
+  color:  #240046;
 }
