card color update

--- a/fullstack-civic-tech-main/frontend/src/pages/UsersPage.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/UsersPage.css
@@ -1,46 +1,47 @@
-.profilePic {
-  object-fit: contain;
-  width: 50%;
-  height: 40%;
-  border-radius: 50%;
-}
-.card {
-  margin-bottom: 20px;
-  width: fit-content;
-}
-.card-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center ;
-  list-style-type: none;
-  height: 90%;
-  justify-content: center;
-  width: 100%;
-  padding: auto;
-  margin: auto;
-}
 .cards-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 70%;
+  padding: 20px; 
+  margin: auto;
 }
-.cardli {
-  margin-bottom: 20px;
-  width: calc(33.33% - 20px);
-  border-radius: 10%;
-  border-width: 3px;
-  border: #000;
-  border-style: solid;
+
+.card-container {
   display: flex;
+}
+
+.cardli {
+  width: calc(33.33% - 20px);
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 8%; 
+  border: 3px solid #000;
+  background-color: antiquewhite;
+  padding: 20px;
+  box-sizing: border-box; 
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column; 
   align-items: center;
   text-align: center;
-  background-color: antiquewhite;
 }
-ul {
-  padding: 0%;
+
+.profilePic {
+  object-fit: contain;
+  width: 50%;
+  height: 50%;
+  border-radius: 50%;
+  height: fit-content;
 }
-figure {
-  display: flex;
-  justify-content: center;
+
+.usersTitle {
+  font-size: larger;
+  font-weight: 500;
+}
+
+.media-content {
+  background-color:antiquewhite;
 }
