--- a/fullstack-civic-tech-main/frontend/src/components/eventCard.css
+++ b/fullstack-civic-tech-main/frontend/src/components/eventCard.css
@@ -1,13 +1,102 @@
 .theHubCard {
-    background-color: yellow;
+    background-color: white;
     width: 300px;
-    height: 400px;
+    height: 250px;
     border-radius: 20px;
     margin: 10px;
+    padding: 30px;
 }
 .theHubEventTitle {
-    font-size: 26px;
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+
 }
 .theHubEventLocation {
     font-size: 15px;
+    font-weight: 400;
+    color: #333;
+    text-align: center;
+}
+.theHubEventDetails {
+    text-align: center;
+    margin-top: 10px;
+}
+.theHubEventDate {
+    font-size: 13px;
+    color: #666
+}
+.theHubEventTime {
+    font-size: 13px;
+    color: #999;
+}
+
+.theHubEventButtons {
+    text-align: center;
+    margin-top: 20px;
+    width: 100%;
+}
+.getTicketsButton {
+    position: relative;
+    border: 1px solid #000;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+}
+.leaveEventButton {
+    margin-left: 40px;
+    border: 1px solid #000;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+}
+.leaveEventButton:hover {
+    background-color: red !important;
+    color: #fff;
+    border: 1px solid #fff;
+}
+.joinEventButton {
+    margin-left: 40px;
+    border: 1px solid #000;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+}
+.joinEventButton:hover {
+    background-color: rgb(48, 29, 83) !important;
+    color: #fff;
+    border: 1px solid #fff;
+}
+.getTicketsButton:hover {
+    background-color: rgb(59, 9, 187) !important;
+    color: #fff;
+    border: 1px solid #fff;
+}
+.commentsContainer {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+}
+.commentInput {
+    height: 40px;
+    width: 100%;
+    padding-left: 10px;
+    border-radius: 7px;
+}
+.commentsButton {
+    background-color: rgb(59, 9, 187) !important;
+    width: 50% !important;
+    border-radius: 10px;
+    color: #fff;
+    margin-top: 10px;
+}
+.userComment {
+    background-color: transparent;
+    color: #000 !important;
+    font-weight: 700;
+    width: 250px;
+    margin-top: 20px;
+    padding: 5px 10px;
+    border-radius: 20px;
+
 }
