--- a/fullstack-civic-tech-main/frontend/src/pages/home.css
+++ b/fullstack-civic-tech-main/frontend/src/pages/home.css
@@ -1,31 +1,51 @@
-.theHubHeading {
-    background-color: red;
+.theHubHeader {
+    position: absolute;
+    margin-top: 10px;
+    padding-left: 20px;
+}
+.theHubTitle {
     font-size: 48px;
+    font-weight: 700;
 }
 .theHubSubtitle {
-    background-color: green;
+    font-size: 20px;
+    transform: translateY(-15px);
+}
+
+.newEventButtonContainer {
+    position: absolute;
+    right: 20px;
+    transform: translateY(20px);
 }
 .newEventButton {
-    background-color: blue !important;
+    background-color: rgb(48, 29, 83) !important;
+    opacity: 100% !important;
     color: white; 
-    padding: 10px 20px;
+    padding: 5px 22px;
     border: none; 
-    border-radius: 5px;
+    border-radius: 100%;
     cursor: pointer; 
-    font-size: 16px;
+    font-size: 50px;
     transition: background-color 0.3s, transform 0.2s;
     z-index: 1000;
 }
+.buttonText {
+    transform: translate(100px, 5px);
+}
 
 .newEventButton:hover, .newEventButton:focus {
-    background-color: darkblue; 
+    filter: saturate(50%);
     transform: scale(1.05);
     outline: none;
 }
 .eventCardList {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    position: relative;
+    flex-wrap:wrap;
+    top: 130px;
+    /* z-index: -1; */
+    
 }
 
 .eventCardListItem {
